[DPE-5658] Update COS alert rules (#727)
* Update postgresql_rules.yaml

* Update pgbouncer_rules.yaml

* Update patroni_rules.yaml

Minor edits and polished yaml formatting

* Apply suggestions from code review

Co-authored-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Update patroni_rules.yaml

* Update pgbouncer_rules.yaml

Using backticks for the alert manager to render newlines correctly.

* Formatting

* Update tox.ini to skip checks on alert rules

* Revert tox.ini change

* Fix PostgreSQL spelling

---------

Co-authored-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/src/prometheus_alert_rules/patroni_rules.yaml
+++ b/src/prometheus_alert_rules/patroni_rules.yaml
@@ -7,13 +7,15 @@ groups:
   rules:
 
     - alert: PatroniPostgresqlDown
-      expr: "patroni_postgres_running == 0"
+      expr: 'patroni_postgres_running == 0'
       for: 0m
       labels:
         severity: critical
       annotations:
-        summary: Patroni Posrgresql Down (instance {{ $labels.instance }})
-        description: "Patroni Postgresql instance is down\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: Patroni PostgreSQL instance {{ $labels.instance }} is down.
+        description: |
+          Check for errors in the Loki logs.
+          LABELS = {{ $labels }}
 
     # 2.4.1
     - alert: PatroniHasNoLeader
@@ -22,5 +24,8 @@ groups:
       labels:
         severity: critical
       annotations:
-        summary: Patroni has no Leader (instance {{ $labels.instance }})
-        description: "A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+        summary: Patroni instance {{ $labels.instance }} has no leader node. 
+        description: |
+          A leader node (neither primary nor standby) cannot be found inside the cluster {{ $labels.scope }}.
+          Check for errors in the Loki logs.
+          LABELS = {{ $labels }}
